tests/Tree/negative/test005.jvt
-- no matching case branch

type list {
  nil : list;
  cons : * -> list -> list;
}

function main() : * {
  case[list](alloc[nil]()) {
    cons: 1
  }
}
